[gd_scene load_steps=7 format=3 uid="uid://deadbody0001"]

[ext_resource type="Script" path="res://scripts/DeadBody.gd" id="1_deadbody"]

[sub_resource type="RectangleShape2D" id="Rect_Head"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="Rect_Body"]
size = Vector2(16, 32)

[sub_resource type="RectangleShape2D" id="Rect_Arm"]
size = Vector2(8, 24)

[sub_resource type="RectangleShape2D" id="Rect_Leg"]
size = Vector2(8, 28)

[node name="DeadBody" type="RigidBody2D"]
collision_layer = 1
collision_mask = 1
mass = 0.5
script = ExtResource("1_deadbody")

[node name="Visual" type="Node2D" parent="."]

[node name="RightArm" type="Polygon2D" parent="Visual"]
position = Vector2(0, -10)
color = Color(0, 0.6, 1, 1)
polygon = PackedVector2Array(-4, -4, 4, -4, 4, 20, -4, 20)

[node name="Remote" type="RemoteTransform2D" parent="Visual/RightArm"]
position = Vector2(0, 8)
remote_path = NodePath("../../../Col_Arm_R")
update_scale = false

[node name="RightLeg" type="Polygon2D" parent="Visual"]
position = Vector2(0, 10)
color = Color(0, 0.08, 0.4, 1)
polygon = PackedVector2Array(-4, -4, 4, -4, 4, 24, -4, 24)

[node name="Remote" type="RemoteTransform2D" parent="Visual/RightLeg"]
position = Vector2(0, 10)
remote_path = NodePath("../../../Col_Leg_R")
update_scale = false

[node name="Body" type="Polygon2D" parent="Visual"]
color = Color(0, 0.6, 1, 1)
polygon = PackedVector2Array(-8, -20, 8, -20, 6, 12, -6, 12)

[node name="Remote" type="RemoteTransform2D" parent="Visual/Body"]
position = Vector2(0, -4)
remote_path = NodePath("../../../Col_Body")
update_scale = false

[node name="Head" type="Polygon2D" parent="Visual/Body"]
position = Vector2(0, -28)
color = Color(1, 0.85, 0.75, 1)
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[node name="Remote" type="RemoteTransform2D" parent="Visual/Body/Head"]
remote_path = NodePath("../../../../Col_Head")
update_scale = false

[node name="LeftLeg" type="Polygon2D" parent="Visual"]
position = Vector2(0, 10)
color = Color(0, 0.08, 0.4, 1)
polygon = PackedVector2Array(-4, -4, 4, -4, 4, 24, -4, 24)

[node name="Remote" type="RemoteTransform2D" parent="Visual/LeftLeg"]
position = Vector2(0, 10)
remote_path = NodePath("../../../Col_Leg_L")
update_scale = false

[node name="LeftArm" type="Polygon2D" parent="Visual"]
position = Vector2(0, -10)
color = Color(0, 0.6, 1, 1)
polygon = PackedVector2Array(-4, -4, 4, -4, 4, 20, -4, 20)

[node name="Remote" type="RemoteTransform2D" parent="Visual/LeftArm"]
position = Vector2(0, 8)
remote_path = NodePath("../../../Col_Arm_L")
update_scale = false

[node name="Col_Body" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("Rect_Body")

[node name="Col_Head" type="CollisionShape2D" parent="."]
position = Vector2(0, -32)
shape = SubResource("Rect_Head")

[node name="Col_Arm_R" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("Rect_Arm")

[node name="Col_Arm_L" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("Rect_Arm")

[node name="Col_Leg_R" type="CollisionShape2D" parent="."]
position = Vector2(0, 20)
shape = SubResource("Rect_Leg")

[node name="Col_Leg_L" type="CollisionShape2D" parent="."]
position = Vector2(0, 20)
shape = SubResource("Rect_Leg")
